Add allowance pane (#19)
This PR adds the html and js to work with the allowance page and

**main features**
see current balance, next allowance and last transactions
able to add and undo transactions
end the week, restarting the task pane and adding allowance

**extra features**
- added extra security layer to ask for pincode for certain activities
- able to view only Milou or Luca seperately
- same look and feel of tabs

**cleanup**
- remove the config store - obsolete
- remove the buttonbar, this is now integrated in panes
